6 functions of the service

--- a/Furniture-Moving-Project/src/main/resources/templates/homepage/homepage.html
+++ b/Furniture-Moving-Project/src/main/resources/templates/homepage/homepage.html
@@ -229,7 +229,7 @@
           </div>
           <div class="service-text">
             <h3>Chuyển nhà trọn gói</h3>
-            <a class="btn" th:href="@{/homepage/request(category='chuyen-nha')}">+</a>
+            <a class="btn" th:href="@{/service/chuyen-nha}">+</a>
           </div>
         </div>
       </div>
@@ -245,7 +245,7 @@
           </div>
           <div class="service-text">
             <h3>Chuyển văn phòng</h3>
-            <a class="btn" th:href="@{/homepage/request(category='chuyen-van-phong')}">+</a>
+            <a class="btn" th:href="@{/service/chuyen-van-phong}">+</a>
           </div>
         </div>
       </div>
@@ -261,7 +261,7 @@
           </div>
           <div class="service-text">
             <h3>Bốc xếp &amp; kho bãi</h3>
-            <a class="btn" th:href="@{/homepage/request(category='boc-xep-kho-bai')}">+</a>
+            <a class="btn" th:href="@{/service/boc-xep-kho-bai}">+</a>
           </div>
         </div>
       </div>
@@ -277,7 +277,7 @@
           </div>
           <div class="service-text">
             <h3>Tháo lắp &amp; đóng gói</h3>
-            <a class="btn" th:href="@{/homepage/request(category='thao-lap-dong-goi')}">+</a>
+            <a class="btn" th:href="@{/service/thao-lap-dong-goi}">+</a>
           </div>
         </div>
       </div>
@@ -293,7 +293,7 @@
           </div>
           <div class="service-text">
             <h3>Vận chuyển liên tỉnh</h3>
-            <a class="btn" th:href="@{/homepage/request(category='lien-tinh')}">+</a>
+            <a class="btn" th:href="@{/service/van-chuyen-lien-tinh}">+</a>
           </div>
         </div>
       </div>
@@ -309,7 +309,7 @@
           </div>
           <div class="service-text">
             <h3>Cho thuê xe tải</h3>
-            <a class="btn" th:href="@{/homepage/request(category='cho-thue-xe')}">+</a>
+            <a class="btn" th:href="@{/service/cho-thue-xe-tai}">+</a>
           </div>
         </div>
       </div>
