Update UI for admin and finish view c.trend and p.stats

--- a/Furniture-Moving-Project/src/main/resources/templates/admin/dashboard.html
+++ b/Furniture-Moving-Project/src/main/resources/templates/admin/dashboard.html
@@ -333,9 +333,7 @@
                     <div class="col-12 col-sm-6 text-center text-sm-start">
                         &copy; <a href="#">Your Site Name</a>, All Right Reserved.
                     </div>
-                    <div class="col-12 col-sm-6 text-center text-sm-end">
-                        Designed By <a href="https://htmlcodex.com">HTML Codex</a>
-                    </div>
+                    <div class="col-12 col-sm-6 text-center text-sm-end">Designed By <a href="https://www.facebook.com/duong.tran.inh.361877/">DuongTD</a></div>
                 </div>
             </div>
         </div>
