list of shipping units

--- a/Furniture-Moving-Project/src/main/resources/templates/homepage/homepage.html
+++ b/Furniture-Moving-Project/src/main/resources/templates/homepage/homepage.html
@@ -325,7 +325,7 @@
                         </div>
                         <div class="service-text">
                             <h3>Chuyển nhà trọn gói</h3>
-                            <a class="btn" th:href="@{/service/chuyen-nha}">+</a>
+                            <a class="btn" th:href="@{/providers}">+</a>
                         </div>
                     </div>
                 </div>
@@ -341,7 +341,7 @@
                         </div>
                         <div class="service-text">
                             <h3>Chuyển văn phòng</h3>
-                            <a class="btn" th:href="@{/service/chuyen-van-phong}">+</a>
+                            <a class="btn" th:href="@{/providers}">+</a>
                         </div>
                     </div>
                 </div>
@@ -357,7 +357,7 @@
                         </div>
                         <div class="service-text">
                             <h3>Bốc xếp &amp; kho bãi</h3>
-                            <a class="btn" th:href="@{/service/boc-xep-kho-bai}">+</a>
+                            <a class="btn" th:href="@{/providers}">+</a>
                         </div>
                     </div>
                 </div>
@@ -373,7 +373,7 @@
                         </div>
                         <div class="service-text">
                             <h3>Tháo lắp &amp; đóng gói</h3>
-                            <a class="btn" th:href="@{/service/thao-lap-dong-goi}">+</a>
+                            <a class="btn" th:href="@{/providers}">+</a>
                         </div>
                     </div>
                 </div>
@@ -389,7 +389,7 @@
                         </div>
                         <div class="service-text">
                             <h3>Vận chuyển liên tỉnh</h3>
-                            <a class="btn" th:href="@{/service/van-chuyen-lien-tinh}">+</a>
+                            <a class="btn" th:href="@{/providers}">+</a>
                         </div>
                     </div>
                 </div>
@@ -405,7 +405,7 @@
                         </div>
                         <div class="service-text">
                             <h3>Cho thuê xe tải</h3>
-                            <a class="btn" th:href="@{/service/cho-thue-xe-tai}">+</a>
+                            <a class="btn" th:href="@{/providers}">+</a>
                         </div>
                     </div>
                 </div>
